fixed font size and font letter spacing

--- a/src/apps/audit-trail/src/components/controls/styles.less
+++ b/src/apps/audit-trail/src/components/controls/styles.less
@@ -18,6 +18,7 @@
   .btnGroup {
     .child {
       flex: inherit;
+      margin-right: 8px;
       &.selected {
         background-color: @zesty-green;
       }
